--- a/index.html
+++ b/index.html
@@ -63,8 +63,7 @@
 
       function disableSecond() {
         const op = document.getElementById("operator").value;
-        // if(op === 'sqrt' || op === 'square'){
-        if (op === "square") {
+        if(op === 'sqrt' || op === 'square'){
           document.getElementById("second").disabled = true;
         } else {
           document.getElementById("second").disabled = false;
